# cmake

./: CMakeLists.txt  README.md
lib/include/: mod.h  multi.h
src/: main.cpp  one.cpp
src/libsrc/: two.cpp
